compiler/tokenizer2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    PRINT

Grammar

Rule 0     S' -> prog
Rule 1     prog -> func prog
Rule 2     prog -> empty
Rule 3     func -> DEF TYPE ID LPAREN flist RPAREN LBRACE body RBRACE
Rule 4     func -> DEF TYPE ID LPAREN flist RPAREN RETURN expr SEMI
Rule 5     body -> <empty>
Rule 6     body -> stmt body
Rule 7     stmt -> expr SEMI
Rule 8     stmt -> defvar SEMI
Rule 9     stmt -> IF LPAREN expr RPAREN stmt
Rule 10    stmt -> IF LPAREN expr RPAREN stmt ELSE stmt
Rule 11    stmt -> WHILE LPAREN expr RPAREN stmt
Rule 12    stmt -> FOR LPAREN ID EQUAL expr TO expr RPAREN stmt
Rule 13    stmt -> RETURN expr SEMI
Rule 14    stmt -> LBRACE body RBRACE
Rule 15    stmt -> func
Rule 16    defvar -> VAR TYPE ID
Rule 17    defvar -> VAR TYPE ID ASSIGN expr
Rule 18    expr -> expr LBLOCK expr RBLOCK
Rule 19    expr -> LBLOCK clist RBLOCK
Rule 20    expr -> expr QUESTIONMARK expr COLON expr
Rule 21    expr -> expr ADD expr
Rule 22    expr -> expr SUB expr
Rule 23    expr -> expr MULT expr
Rule 24    expr -> expr DIV expr
Rule 25    expr -> expr MOD expr
Rule 26    expr -> expr GREATER expr
Rule 27    expr -> expr LESS expr
Rule 28    expr -> expr EQUAL expr
Rule 29    expr -> expr GREATEREQ expr
Rule 30    expr -> expr LESSEQ expr
Rule 31    expr -> expr NOTEQUAL expr
Rule 32    expr -> expr OR expr
Rule 33    expr -> expr AND expr
Rule 34    expr -> NOT expr
Rule 35    expr -> ADD expr
Rule 36    expr -> SUB expr
Rule 37    expr -> ID
Rule 38    expr -> ID ASSIGN expr
Rule 39    expr -> ID LPAREN clist RPAREN
Rule 40    expr -> INT
Rule 41    expr -> STRING
Rule 42    clist -> <empty>
Rule 43    clist -> expr
Rule 44    clist -> expr COMMA clist
Rule 45    flist -> <empty>
Rule 46    flist -> TYPE ID
Rule 47    flist -> TYPE ID COMMA flist
Rule 48    type -> INT
Rule 49    type -> VECTOR
Rule 50    type -> NULL
Rule 51    type -> STRING
Rule 52    empty -> <empty>

Terminals, with rules where they appear

ADD                  : 21 35
AND                  : 33
ASSIGN               : 17 38
COLON                : 20
COMMA                : 44 47
DEF                  : 3 4
DIV                  : 24
ELSE                 : 10
EQUAL                : 12 28
FOR                  : 12
GREATER              : 26
GREATEREQ            : 29
ID                   : 3 4 12 16 17 37 38 39 46 47
IF                   : 9 10
INT                  : 40 48
LBLOCK               : 18 19
LBRACE               : 3 14
LESS                 : 27
LESSEQ               : 30
LPAREN               : 3 4 9 10 11 12 39
MOD                  : 25
MULT                 : 23
NOT                  : 34
NOTEQUAL             : 31
NULL                 : 50
OR                   : 32
PRINT                : 
QUESTIONMARK         : 20
RBLOCK               : 18 19
RBRACE               : 3 14
RETURN               : 4 13
RPAREN               : 3 4 9 10 11 12 39
SEMI                 : 4 7 8 13
STRING               : 41 51
SUB                  : 22 36
TO                   : 12
TYPE                 : 3 4 16 17 46 47
VAR                  : 16 17
VECTOR               : 49
WHILE                : 11
error                : 

Nonterminals, with rules where they appear

body                 : 3 6 14
clist                : 19 39 44
defvar               : 8
empty                : 2
expr                 : 4 7 9 10 11 12 12 13 17 18 18 20 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 35 36 38 43 44
flist                : 3 4 47
func                 : 1 15
prog                 : 1 0
stmt                 : 6 9 10 10 11 12
type                 : 

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . func prog
    (2) prog -> . empty
    (3) func -> . DEF TYPE ID LPAREN flist RPAREN LBRACE body RBRACE
    (4) func -> . DEF TYPE ID LPAREN flist RPAREN RETURN expr SEMI
    (52) empty -> .

    DEF             shift and go to state 4
    $end            reduce using rule 52 (empty -> .)

    prog                           shift and go to state 1
    func                           shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> prog .



state 2

    (1) prog -> func . prog
    (1) prog -> . func prog
    (2) prog -> . empty
    (3) func -> . DEF TYPE ID LPAREN flist RPAREN LBRACE body RBRACE
    (4) func -> . DEF TYPE ID LPAREN flist RPAREN RETURN expr SEMI
    (52) empty -> .

    DEF             shift and go to state 4
    $end            reduce using rule 52 (empty -> .)

    func                           shift and go to state 2
    prog                           shift and go to state 5
    empty                          shift and go to state 3

state 3

    (2) prog -> empty .

    $end            reduce using rule 2 (prog -> empty .)


state 4

    (3) func -> DEF . TYPE ID LPAREN flist RPAREN LBRACE body RBRACE
    (4) func -> DEF . TYPE ID LPAREN flist RPAREN RETURN expr SEMI

    TYPE            shift and go to state 6


state 5

    (1) prog -> func prog .

    $end            reduce using rule 1 (prog -> func prog .)


state 6

    (3) func -> DEF TYPE . ID LPAREN flist RPAREN LBRACE body RBRACE
    (4) func -> DEF TYPE . ID LPAREN flist RPAREN RETURN expr SEMI

    ID              shift and go to state 7


state 7

    (3) func -> DEF TYPE ID . LPAREN flist RPAREN LBRACE body RBRACE
    (4) func -> DEF TYPE ID . LPAREN flist RPAREN RETURN expr SEMI

    LPAREN          shift and go to state 8


state 8

    (3) func -> DEF TYPE ID LPAREN . flist RPAREN LBRACE body RBRACE
    (4) func -> DEF TYPE ID LPAREN . flist RPAREN RETURN expr SEMI
    (45) flist -> .
    (46) flist -> . TYPE ID
    (47) flist -> . TYPE ID COMMA flist

    RPAREN          reduce using rule 45 (flist -> .)
    TYPE            shift and go to state 9

    flist                          shift and go to state 10

state 9

    (46) flist -> TYPE . ID
    (47) flist -> TYPE . ID COMMA flist

    ID              shift and go to state 11


state 10

    (3) func -> DEF TYPE ID LPAREN flist . RPAREN LBRACE body RBRACE
    (4) func -> DEF TYPE ID LPAREN flist . RPAREN RETURN expr SEMI

    RPAREN          shift and go to state 12


state 11

    (46) flist -> TYPE ID .
    (47) flist -> TYPE ID . COMMA flist

    RPAREN          reduce using rule 46 (flist -> TYPE ID .)
    COMMA           shift and go to state 13


state 12

    (3) func -> DEF TYPE ID LPAREN flist RPAREN . LBRACE body RBRACE
    (4) func -> DEF TYPE ID LPAREN flist RPAREN . RETURN expr SEMI

    LBRACE          shift and go to state 14
    RETURN          shift and go to state 15


state 13

    (47) flist -> TYPE ID COMMA . flist
    (45) flist -> .
    (46) flist -> . TYPE ID
    (47) flist -> . TYPE ID COMMA flist

    RPAREN          reduce using rule 45 (flist -> .)
    TYPE            shift and go to state 9

    flist                          shift and go to state 16

state 14

    (3) func -> DEF TYPE ID LPAREN flist RPAREN LBRACE . body RBRACE
    (5) body -> .
    (6) body -> . stmt body
    (7) stmt -> . expr SEMI
    (8) stmt -> . defvar SEMI
    (9) stmt -> . IF LPAREN expr RPAREN stmt
    (10) stmt -> . IF LPAREN expr RPAREN stmt ELSE stmt
    (11) stmt -> . WHILE LPAREN expr RPAREN stmt
    (12) stmt -> . FOR LPAREN ID EQUAL expr TO expr RPAREN stmt
    (13) stmt -> . RETURN expr SEMI
    (14) stmt -> . LBRACE body RBRACE
    (15) stmt -> . func
    (18) expr -> . expr LBLOCK expr RBLOCK
    (19) expr -> . LBLOCK clist RBLOCK
    (20) expr -> . expr QUESTIONMARK expr COLON expr
    (21) expr -> . expr ADD expr
    (22) expr -> . expr SUB expr
    (23) expr -> . expr MULT expr
    (24) expr -> . expr DIV expr
    (25) expr -> . expr MOD expr
    (26) expr -> . expr GREATER expr
    (27) expr -> . expr LESS expr
    (28) expr -> . expr EQUAL expr
    (29) expr -> . expr GREATEREQ expr
    (30) expr -> . expr LESSEQ expr
    (31) expr -> . expr NOTEQUAL expr
    (32) expr -> . expr OR expr
    (33) expr -> . expr AND expr
    (34) expr -> . NOT expr
    (35) expr -> . ADD expr
    (36) expr -> . SUB expr
    (37) expr -> . ID
    (38) expr -> . ID ASSIGN expr
    (39) expr -> . ID LPAREN clist RPAREN
    (40) expr -> . INT
    (41) expr -> . STRING
    (16) defvar -> . VAR TYPE ID
    (17) defvar -> . VAR TYPE ID ASSIGN expr
    (3) func -> . DEF TYPE ID LPAREN flist RPAREN LBRACE body RBRACE
    (4) func -> . DEF TYPE ID LPAREN flist RPAREN RETURN expr SEMI

    RBRACE          reduce using rule 5 (body -> .)
    IF              shift and go to state 23
    WHILE           shift and go to state 24
    FOR             shift and go to state 25
    RETURN          shift and go to state 26
    LBRACE          shift and go to state 18
    LBLOCK          shift and go to state 28
    NOT             shift and go to state 31
    ADD             shift and go to state 29
    SUB             shift and go to state 30
    ID              shift and go to state 17
    INT             shift and go to state 32
    STRING          shift and go to state 33
    VAR             shift and go to state 34
    DEF             shift and go to state 4

    body                           shift and go to state 19
    stmt                           shift and go to state 20
    expr                           shift and go to state 21
    defvar                         shift and go to state 22
    func                           shift and go to state 27

state 15

    (4) func -> DEF TYPE ID LPAREN flist RPAREN RETURN . expr SEMI
    (18) expr -> . expr LBLOCK expr RBLOCK
    (19) expr -> . LBLOCK clist RBLOCK
    (20) expr -> . expr QUESTIONMARK expr COLON expr
    (21) expr -> . expr ADD expr
    (22) expr -> . expr SUB expr
    (23) expr -> . expr MULT expr
    (24) expr -> . expr DIV expr
    (25) expr -> . expr MOD expr
    (26) expr -> . expr GREATER expr
    (27) expr -> . expr LESS expr
    (28) expr -> . expr EQUAL expr
    (29) expr -> . expr GREATEREQ expr
    (30) expr -> . expr LESSEQ expr
    (31) expr -> . expr NOTEQUAL expr
    (32) expr -> . expr OR expr
    (33) expr -> . expr AND expr
    (34) expr -> . NOT expr
    (35) expr -> . ADD expr
    (36) expr -> . SUB expr
    (37) expr -> . ID
    (38) expr -> . ID ASSIGN expr
    (39) expr -> . ID LPAREN clist RPAREN
    (40) expr -> . INT
    (41) expr -> . STRING

    LBLOCK          shift and go to state 28
    NOT             shift and go to state 31
    ADD             shift and go to state 29
    SUB             shift and go to state 30
    ID              shift and go to state 17
    INT             shift and go to state 32
    STRING          shift and go to state 33

    expr                           shift and go to state 35

state 16

    (47) flist -> TYPE ID COMMA flist .

    RPAREN          reduce using rule 47 (flist -> TYPE ID COMMA flist .)


state 17

    (37) expr -> ID .
    (38) expr -> ID . ASSIGN expr
    (39) expr -> ID . LPAREN clist RPAREN

    SEMI            reduce using rule 37 (expr -> ID .)
    LBLOCK          reduce using rule 37 (expr -> ID .)
    QUESTIONMARK    reduce using rule 37 (expr -> ID .)
    ADD             reduce using rule 37 (expr -> ID .)
    SUB             reduce using rule 37 (expr -> ID .)
    MULT            reduce using rule 37 (expr -> ID .)
    DIV             reduce using rule 37 (expr -> ID .)
    MOD             reduce using rule 37 (expr -> ID .)
    GREATER         reduce using rule 37 (expr -> ID .)
    LESS            reduce using rule 37 (expr -> ID .)
    EQUAL           reduce using rule 37 (expr -> ID .)
    GREATEREQ       reduce using rule 37 (expr -> ID .)
    LESSEQ          reduce using rule 37 (expr -> ID .)
    NOTEQUAL        reduce using rule 37 (expr -> ID .)
    OR              reduce using rule 37 (expr -> ID .)
    AND             reduce using rule 37 (expr -> ID .)
    COMMA           reduce using rule 37 (expr -> ID .)
    RBLOCK          reduce using rule 37 (expr -> ID .)
    RPAREN          reduce using rule 37 (expr -> ID .)
    COLON           reduce using rule 37 (expr -> ID .)
    TO              reduce using rule 37 (expr -> ID .)
    ASSIGN          shift and go to state 36
    LPAREN          shift and go to state 37


state 18

    (14) stmt -> LBRACE . body RBRACE
    (5) body -> .
    (6) body -> . stmt body
    (7) stmt -> . expr SEMI
    (8) stmt -> . defvar SEMI
    (9) stmt -> . IF LPAREN expr RPAREN stmt
    (10) stmt -> . IF LPAREN expr RPAREN stmt ELSE stmt
    (11) stmt -> . WHILE LPAREN expr RPAREN stmt
    (12) stmt -> . FOR LPAREN ID EQUAL expr TO expr RPAREN stmt
    (13) stmt -> . RETURN expr SEMI
    (14) stmt -> . LBRACE body RBRACE
    (15) stmt -> . func
    (18) expr -> . expr LBLOCK expr RBLOCK
    (19) expr -> . LBLOCK clist RBLOCK
    (20) expr -> . expr QUESTIONMARK expr COLON expr
    (21) expr -> . expr ADD expr
    (22) expr -> . expr SUB expr
    (23) expr -> . expr MULT expr
    (24) expr -> . expr DIV expr
    (25) expr -> . expr MOD expr
    (26) expr -> . expr GREATER expr
    (27) expr -> . expr LESS expr
    (28) expr -> . expr EQUAL expr
    (29) expr -> . expr GREATEREQ expr
    (30) expr -> . expr LESSEQ expr
    (31) expr -> . expr NOTEQUAL expr
    (32) expr -> . expr OR expr
    (33) expr -> . expr AND expr
    (34) expr -> . NOT expr
    (35) expr -> . ADD expr
    (36) expr -> . SUB expr
    (37) expr -> . ID
    (38) expr -> . ID ASSIGN expr
    (39) expr -> . ID LPAREN clist RPAREN
    (40) expr -> . INT
    (41) expr -> . STRING
    (16) defvar -> . VAR TYPE ID
    (17) defvar -> . VAR TYPE ID ASSIGN expr
    (3) func -> . DEF TYPE ID LPAREN flist RPAREN LBRACE body RBRACE
    (4) func -> . DEF TYPE ID LPAREN flist RPAREN RETURN expr SEMI

    RBRACE          reduce using rule 5 (body -> .)
    IF              shift and go to state 23
    WHILE           shift and go to state 24
    FOR             shift and go to state 25
    RETURN          shift and go to state 26
    LBRACE          shift and go to state 18
    LBLOCK          shift and go to state 28
    NOT             shift and go to state 31
    ADD             shift and go to state 29
    SUB             shift and go to state 30
    ID              shift and go to state 17
    INT             shift and go to state 32
    STRING          shift and go to state 33
    VAR             shift and go to state 34
    DEF             shift and go to state 4

    body                           shift and go to state 38
    stmt                           shift and go to state 20
    expr                           shift and go to state 21
    defvar                         shift and go to state 22
    func                           shift and go to state 27

state 19

    (3) func -> DEF TYPE ID LPAREN flist RPAREN LBRACE body . RBRACE

    RBRACE          shift and go to state 39


state 20

    (6) body -> stmt . body
    (5) body -> .
    (6) body -> . stmt body
    (7) stmt -> . expr SEMI
    (8) stmt -> . defvar SEMI
    (9) stmt -> . IF LPAREN expr RPAREN stmt
    (10) stmt -> . IF LPAREN expr RPAREN stmt ELSE stmt
    (11) stmt -> . WHILE LPAREN expr RPAREN stmt
    (12) stmt -> . FOR LPAREN ID EQUAL expr TO expr RPAREN stmt
    (13) stmt -> . RETURN expr SEMI
    (14) stmt -> . LBRACE body RBRACE
    (15) stmt -> . func
    (18) expr -> . expr LBLOCK expr RBLOCK
    (19) expr -> . LBLOCK clist RBLOCK
    (20) expr -> . expr QUESTIONMARK expr COLON expr
    (21) expr -> . expr ADD expr
    (22) expr -> . expr SUB expr
    (23) expr -> . expr MULT expr
    (24) expr -> . expr DIV expr
    (25) expr -> . expr MOD expr
    (26) expr -> . expr GREATER expr
    (27) expr -> . expr LESS expr
    (28) expr -> . expr EQUAL expr
    (29) expr -> . expr GREATEREQ expr
    (30) expr -> . expr LESSEQ expr
    (31) expr -> . expr NOTEQUAL expr
    (32) expr -> . expr OR expr
    (33) expr -> . expr AND expr
    (34) expr -> . NOT expr
    (35) expr -> . ADD expr
    (36) expr -> . SUB expr
    (37) expr -> . ID
    (38) expr -> . ID ASSIGN expr
    (39) expr -> . ID LPAREN clist RPAREN
    (40) expr -> . INT
    (41) expr -> . STRING
    (16) defvar -> . VAR TYPE ID
    (17) defvar -> . VAR TYPE ID ASSIGN expr
    (3) func -> . DEF TYPE ID LPAREN flist RPAREN LBRACE body RBRACE
    (4) func -> . DEF TYPE ID LPAREN flist RPAREN RETURN expr SEMI

    RBRACE          reduce using rule 5 (body -> .)
    IF              shift and go to state 23
    WHILE           shift and go to state 24
    FOR             shift and go to state 25
    RETURN          shift and go to state 26
    LBRACE          shift and go to state 18
    LBLOCK          shift and go to state 28
    NOT             shift and go to state 31
    ADD             shift and go to state 29
    SUB             shift and go to state 30
    ID              shift and go to state 17
    INT             shift and go to state 32
    STRING          shift and go to state 33
    VAR             shift and go to state 34
    DEF             shift and go to state 4

    stmt                           shift and go to state 20
    body                           shift and go to state 40
    expr                           shift and go to state 21
    defvar                         shift and go to state 22
    func                           shift and go to state 27

state 21

    (7) stmt -> expr . SEMI
    (18) expr -> expr . LBLOCK expr RBLOCK
    (20) expr -> expr . QUESTIONMARK expr COLON expr
    (21) expr -> expr . ADD expr
    (22) expr -> expr . SUB expr
    (23) expr -> expr . MULT expr
    (24) expr -> expr . DIV expr
    (25) expr -> expr . MOD expr
    (26) expr -> expr . GREATER expr
    (27) expr -> expr . LESS expr
    (28) expr -> expr . EQUAL expr
    (29) expr -> expr . GREATEREQ expr
    (30) expr -> expr . LESSEQ expr
    (31) expr -> expr . NOTEQUAL expr
    (32) expr -> expr . OR expr
    (33) expr -> expr . AND expr

    SEMI            shift and go to state 41
    LBLOCK          shift and go to state 42
    QUESTIONMARK    shift and go to state 43
    ADD             shift and go to state 44
    SUB             shift and go to state 45
    MULT            shift and go to state 46
    DIV             shift and go to state 47
    MOD             shift and go to state 48
    GREATER         shift and go to state 49
    LESS            shift and go to state 50
    EQUAL           shift and go to state 51
    GREATEREQ       shift and go to state 52
    LESSEQ          shift and go to state 53
    NOTEQUAL        shift and go to state 54
    OR              shift and go to state 55
    AND             shift and go to state 56


state 22

    (8) stmt -> defvar . SEMI

    SEMI            shift and go to state 57


state 23

    (9) stmt -> IF . LPAREN expr RPAREN stmt
    (10) stmt -> IF . LPAREN expr RPAREN stmt ELSE stmt

    LPAREN          shift and go to state 58


state 24

    (11) stmt -> WHILE . LPAREN expr RPAREN stmt

    LPAREN          shift and go to state 59


state 25

    (12) stmt -> FOR . LPAREN ID EQUAL expr TO expr RPAREN stmt

    LPAREN          shift and go to state 60


state 26

    (13) stmt -> RETURN . expr SEMI
    (18) expr -> . expr LBLOCK expr RBLOCK
    (19) expr -> . LBLOCK clist RBLOCK
    (20) expr -> . expr QUESTIONMARK expr COLON expr
    (21) expr -> . expr ADD expr
    (22) expr -> . expr SUB expr
    (23) expr -> . expr MULT expr
    (24) expr -> . expr DIV expr
    (25) expr -> . expr MOD expr
    (26) expr -> . expr GREATER expr
    (27) expr -> . expr LESS expr
    (28) expr -> . expr EQUAL expr
    (29) expr -> . expr GREATEREQ expr
    (30) expr -> . expr LESSEQ expr
    (31) expr -> . expr NOTEQUAL expr
    (32) expr -> . expr OR expr
    (33) expr -> . expr AND expr
    (34) expr -> . NOT expr
    (35) expr -> . ADD expr
    (36) expr -> . SUB expr
    (37) expr -> . ID
    (38) expr -> . ID ASSIGN expr
    (39) expr -> . ID LPAREN clist RPAREN
    (40) expr -> . INT
    (41) expr -> . STRING

    LBLOCK          shift and go to state 28
    NOT             shift and go to state 31
    ADD             shift and go to state 29
    SUB             shift and go to state 30
    ID              shift and go to state 17
    INT             shift and go to state 32
    STRING          shift and go to state 33

    expr                           shift and go to state 61

state 27

    (15) stmt -> func .

    IF              reduce using rule 15 (stmt -> func .)
    WHILE           reduce using rule 15 (stmt -> func .)
    FOR             reduce using rule 15 (stmt -> func .)
    RETURN          reduce using rule 15 (stmt -> func .)
    LBRACE          reduce using rule 15 (stmt -> func .)
    LBLOCK          reduce using rule 15 (stmt -> func .)
    NOT             reduce using rule 15 (stmt -> func .)
    ADD             reduce using rule 15 (stmt -> func .)
    SUB             reduce using rule 15 (stmt -> func .)
    ID              reduce using rule 15 (stmt -> func .)
    INT             reduce using rule 15 (stmt -> func .)
    STRING          reduce using rule 15 (stmt -> func .)
    VAR             reduce using rule 15 (stmt -> func .)
    DEF             reduce using rule 15 (stmt -> func .)
    RBRACE          reduce using rule 15 (stmt -> func .)
    ELSE            reduce using rule 15 (stmt -> func .)


state 28

    (19) expr -> LBLOCK . clist RBLOCK
    (42) clist -> .
    (43) clist -> . expr
    (44) clist -> . expr COMMA clist
    (18) expr -> . expr LBLOCK expr RBLOCK
    (19) expr -> . LBLOCK clist RBLOCK
    (20) expr -> . expr QUESTIONMARK expr COLON expr
    (21) expr -> . expr ADD expr
    (22) expr -> . expr SUB expr
    (23) expr -> . expr MULT expr
    (24) expr -> . expr DIV expr
    (25) expr -> . expr MOD expr
    (26) expr -> . expr GREATER expr
    (27) expr -> . expr LESS expr
    (28) expr -> . expr EQUAL expr
    (29) expr -> . expr GREATEREQ expr
    (30) expr -> . expr LESSEQ expr
    (31) expr -> . expr NOTEQUAL expr
    (32) expr -> . expr OR expr
    (33) expr -> . expr AND expr
    (34) expr -> . NOT expr
    (35) expr -> . ADD expr
    (36) expr -> . SUB expr
    (37) expr -> . ID
    (38) expr -> . ID ASSIGN expr
    (39) expr -> . ID LPAREN clist RPAREN
    (40) expr -> . INT
    (41) expr -> . STRING

    RBLOCK          reduce using rule 42 (clist -> .)
    LBLOCK          shift and go to state 28
    NOT             shift and go to state 31
    ADD             shift and go to state 29
    SUB             shift and go to state 30
    ID              shift and go to state 17
    INT             shift and go to state 32
    STRING          shift and go to state 33

    clist                          shift and go to state 62
    expr                           shift and go to state 63

state 29

    (35) expr -> ADD . expr
    (18) expr -> . expr LBLOCK expr RBLOCK
    (19) expr -> . LBLOCK clist RBLOCK
    (20) expr -> . expr QUESTIONMARK expr COLON expr
    (21) expr -> . expr ADD expr
    (22) expr -> . expr SUB expr
    (23) expr -> . expr MULT expr
    (24) expr -> . expr DIV expr
    (25) expr -> . expr MOD expr
    (26) expr -> . expr GREATER expr
    (27) expr -> . expr LESS expr
    (28) expr -> . expr EQUAL expr
    (29) expr -> . expr GREATEREQ expr
    (30) expr -> . expr LESSEQ expr
    (31) expr -> . expr NOTEQUAL expr
    (32) expr -> . expr OR expr
    (33) expr -> . expr AND expr
    (34) expr -> . NOT expr
    (35) expr -> . ADD expr
    (36) expr -> . SUB expr
    (37) expr -> . ID
    (38) expr -> . ID ASSIGN expr
    (39) expr -> . ID LPAREN clist RPAREN
    (40) expr -> . INT
    (41) expr -> . STRING

    LBLOCK          shift and go to state 28
    NOT             shift and go to state 31
    ADD             shift and go to state 29
    SUB             shift and go to state 30
    ID              shift and go to state 17
    INT             shift and go to state 32
    STRING          shift and go to state 33

    expr                           shift and go to state 64

state 30

    (36) expr -> SUB . expr
    (18) expr -> . expr LBLOCK expr RBLOCK
    (19) expr -> . LBLOCK clist RBLOCK
    (20) expr -> . expr QUESTIONMARK expr COLON expr
    (21) expr -> . expr ADD expr
    (22) expr -> . expr SUB expr
    (23) expr -> . expr MULT expr
    (24) expr -> . expr DIV expr
    (25) expr -> . expr MOD expr
    (26) expr -> . expr GREATER expr
    (27) expr -> . expr LESS expr
    (28) expr -> . expr EQUAL expr
    (29) expr -> . expr GREATEREQ expr
    (30) expr -> . expr LESSEQ expr
    (31) expr -> . expr NOTEQUAL expr
    (32) expr -> . expr OR expr
    (33) expr -> . expr AND expr
    (34) expr -> . NOT expr
    (35) expr -> . ADD expr
    (36) expr -> . SUB expr
    (37) expr -> . ID
    (38) expr -> . ID ASSIGN expr
    (39) expr -> . ID LPAREN clist RPAREN
    (40) expr -> . INT
    (41) expr -> . STRING

    LBLOCK          shift and go to state 28
    NOT             shift and go to state 31
    ADD             shift and go to state 29
    SUB             shift and go to state 30
    ID              shift and go to state 17
    INT             shift and go to state 32
    STRING          shift and go to state 33

    expr                           shift and go to state 65

state 31

    (34) expr -> NOT . expr
    (18) expr -> . expr LBLOCK expr RBLOCK
    (19) expr -> . LBLOCK clist RBLOCK
    (20) expr -> . expr QUESTIONMARK expr COLON expr
    (21) expr -> . expr ADD expr
    (22) expr -> . expr SUB expr
    (23) expr -> . expr MULT expr
    (24) expr -> . expr DIV expr
    (25) expr -> . expr MOD expr
    (26) expr -> . expr GREATER expr
    (27) expr -> . expr LESS expr
    (28) expr -> . expr EQUAL expr
    (29) expr -> . expr GREATEREQ expr
    (30) expr -> . expr LESSEQ expr
    (31) expr -> . expr NOTEQUAL expr
    (32) expr -> . expr OR expr
    (33) expr -> . expr AND expr
    (34) expr -> . NOT expr
    (35) expr -> . ADD expr
    (36) expr -> . SUB expr
    (37) expr -> . ID
    (38) expr -> . ID ASSIGN expr
    (39) expr -> . ID LPAREN clist RPAREN
    (40) expr -> . INT
    (41) expr -> . STRING

    LBLOCK          shift and go to state 28
    NOT             shift and go to state 31
    ADD             shift and go to state 29
    SUB             shift and go to state 30
    ID              shift and go to state 17
    INT             shift and go to state 32
    STRING          shift and go to state 33

    expr                           shift and go to state 66

state 32

    (40) expr -> INT .

    SEMI            reduce using rule 40 (expr -> INT .)
    LBLOCK          reduce using rule 40 (expr -> INT .)
    QUESTIONMARK    reduce using rule 40 (expr -> INT .)
    ADD             reduce using rule 40 (expr -> INT .)
    SUB             reduce using rule 40 (expr -> INT .)
    MULT            reduce using rule 40 (expr -> INT .)
    DIV             reduce using rule 40 (expr -> INT .)
    MOD             reduce using rule 40 (expr -> INT .)
    GREATER         reduce using rule 40 (expr -> INT .)
    LESS            reduce using rule 40 (expr -> INT .)
    EQUAL           reduce using rule 40 (expr -> INT .)
    GREATEREQ       reduce using rule 40 (expr -> INT .)
    LESSEQ          reduce using rule 40 (expr -> INT .)
    NOTEQUAL        reduce using rule 40 (expr -> INT .)
    OR              reduce using rule 40 (expr -> INT .)
    AND             reduce using rule 40 (expr -> INT .)
    COMMA           reduce using rule 40 (expr -> INT .)
    RBLOCK          reduce using rule 40 (expr -> INT .)
    RPAREN          reduce using rule 40 (expr -> INT .)
    COLON           reduce using rule 40 (expr -> INT .)
    TO              reduce using rule 40 (expr -> INT .)


state 33

    (41) expr -> STRING .

    SEMI            reduce using rule 41 (expr -> STRING .)
    LBLOCK          reduce using rule 41 (expr -> STRING .)
    QUESTIONMARK    reduce using rule 41 (expr -> STRING .)
    ADD             reduce using rule 41 (expr -> STRING .)
    SUB             reduce using rule 41 (expr -> STRING .)
    MULT            reduce using rule 41 (expr -> STRING .)
    DIV             reduce using rule 41 (expr -> STRING .)
    MOD             reduce using rule 41 (expr -> STRING .)
    GREATER         reduce using rule 41 (expr -> STRING .)
    LESS            reduce using rule 41 (expr -> STRING .)
    EQUAL           reduce using rule 41 (expr -> STRING .)
    GREATEREQ       reduce using rule 41 (expr -> STRING .)
    LESSEQ          reduce using rule 41 (expr -> STRING .)
    NOTEQUAL        reduce using rule 41 (expr -> STRING .)
    OR              reduce using rule 41 (expr -> STRING .)
    AND             reduce using rule 41 (expr -> STRING .)
    COMMA           reduce using rule 41 (expr -> STRING .)
    RBLOCK          reduce using rule 41 (expr -> STRING .)
    RPAREN          reduce using rule 41 (expr -> STRING .)
    COLON           reduce using rule 41 (expr -> STRING .)
    TO              reduce using rule 41 (expr -> STRING .)


state 34

    (16) defvar -> VAR . TYPE ID
    (17) defvar -> VAR . TYPE ID ASSIGN expr

    TYPE            shift and go to state 67


state 35

    (4) func -> DEF TYPE ID LPAREN flist RPAREN RETURN expr . SEMI
    (18) expr -> expr . LBLOCK expr RBLOCK
    (20) expr -> expr . QUESTIONMARK expr COLON expr
    (21) expr -> expr . ADD expr
    (22) expr -> expr . SUB expr
    (23) expr -> expr . MULT expr
    (24) expr -> expr . DIV expr
    (25) expr -> expr . MOD expr
    (26) expr -> expr . GREATER expr
    (27) expr -> expr . LESS expr
    (28) expr -> expr . EQUAL expr
    (29) expr -> expr . GREATEREQ expr
    (30) expr -> expr . LESSEQ expr
    (31) expr -> expr . NOTEQUAL expr
    (32) expr -> expr . OR expr
    (33) expr -> expr . AND expr

    SEMI            shift and go to state 68
    LBLOCK          shift and go to state 42
    QUESTIONMARK    shift and go to state 43
    ADD             shift and go to state 44
    SUB             shift and go to state 45
    MULT            shift and go to state 46
    DIV             shift and go to state 47
    MOD             shift and go to state 48
    GREATER         shift and go to state 49
    LESS            shift and go to state 50
    EQUAL           shift and go to state 51
    GREATEREQ       shift and go to state 52
    LESSEQ          shift and go to state 53
    NOTEQUAL        shift and go to state 54
    OR              shift and go to state 55
    AND             shift and go to state 56


state 36

    (38) expr -> ID ASSIGN . expr
    (18) expr -> . expr LBLOCK expr RBLOCK
    (19) expr -> . LBLOCK clist RBLOCK
    (20) expr -> . expr QUESTIONMARK expr COLON expr
    (21) expr -> . expr ADD expr
    (22) expr -> . expr SUB expr
    (23) expr -> . expr MULT expr
    (24) expr -> . expr DIV expr
    (25) expr -> . expr MOD expr
    (26) expr -> . expr GREATER expr
    (27) expr -> . expr LESS expr
    (28) expr -> . expr EQUAL expr
    (29) expr -> . expr GREATEREQ expr
    (30) expr -> . expr LESSEQ expr
    (31) expr -> . expr NOTEQUAL expr
    (32) expr -> . expr OR expr
    (33) expr -> . expr AND expr
    (34) expr -> . NOT expr
    (35) expr -> . ADD expr
    (36) expr -> . SUB expr
    (37) expr -> . ID
    (38) expr -> . ID ASSIGN expr
    (39) expr -> . ID LPAREN clist RPAREN
    (40) expr -> . INT
    (41) expr -> . STRING

    LBLOCK          shift and go to state 28
    NOT             shift and go to state 31
    ADD             shift and go to state 29
    SUB             shift and go to state 30
    ID              shift and go to state 17
    INT             shift and go to state 32
    STRING          shift and go to state 33

    expr                           shift and go to state 69

state 37
